# OpenGL_Arkonoid

./: CMakeLists.txt  Main.cpp  vcpkg.json
include/: Ball.hpp  Game.hpp  GameLevel.hpp  GameObject.hpp  ResourceManager.hpp  TileType.hpp
include/Effects/: Particle.hpp  ParticleGenerator.hpp  PostProcessor.hpp
include/Graphics/: Color.hpp  Shader.hpp  SpriteRenderer.hpp  Texture2D.hpp
include/Physics/: Collision.hpp
resources/shaders/: fragment.glsl
resources/shaders/particle/: fragment.glsl  vertex.glsl
resources/shaders/postprocess/: fragment.glsl  vertex.glsl
src/: Ball.cpp  Game.cpp  GameLevel.cpp  GameObject.cpp  ResourceManager.cpp
src/Effects/: ParticleGenerator.cpp  PostProcessor.cpp
src/Graphics/: Shader.cpp  SpriteRenderer.cpp  Texture2D.cpp
src/Physics/: Collision.cpp
